cube surface cannot be clicked from behind. made the opening text to be sent instead of fixed, thus having selection capability. added unique selection in intents_edit

--- a/app/static/styles/user_style.css
+++ b/app/static/styles/user_style.css
@@ -206,6 +206,10 @@ footer img {
     width: 100%;
 }
 
+#D3Cube #side4 a {
+    position: absolute;
+}
+
 #D3Cube .box-surface img {
     display: block;
     width: 100%;
